--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.1.1",
+    "@react-navigation/compat": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
     "galio-framework": "^0.6.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-input-scroll-view": "^1.9.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modal-selector": "^1.1.5",
     "react-native-reanimated": "^1.7.0",
     "react-native-root-toast": "^3.2.0",
     "react-native-safe-area-context": "^0.7.3",
