--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-input-scroll-view": "^1.9.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal-selector": "^1.1.5",
