--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-input-scroll-view": "^1.9.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modal": "^11.5.4",
     "react-native-modal-selector": "^1.1.5",
     "react-native-reanimated": "^1.7.0",
     "react-native-root-toast": "^3.2.0",
